To avoid any influence on the class "justify-between" the alignment isolated as a particular class - Чтобы избежать какого-либо влияния на класс "justify-between", выравнивание выделено в отдельный класс

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ p {
 .justify-between {
     display: flex;
     justify-content: space-between;
+}
+
+.aline-center {
+    display: flex;
     align-items: center;
 }
 
